// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeadingWithLinks native View should empty render correctly 1`] = `
<View>
  <Styled(Text)
    noTopPadding={false}
  >
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator="Page_Heading_link_header"
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      numberOfLines={null}
      text=""
      textDecoration={null}
    />
  </Styled(Text)>
  <Styled(LineComp)
    borderColor="black"
    borderWidth={1}
    marginBottom={28}
    marginLeft={0}
    marginRight={0}
    marginTop={0}
  />
  <Styled(View)>
    <Styled(Anchor)
      accessibilityLabel=""
      anchorVariation="primary"
      colorName={null}
      customStyle={Object {}}
      dataLocator="my-rewards-program-details"
      fontSizeVariation="medium"
      justifyContent=""
      locator=""
      margins={null}
      onPress={[Function]}
      text=""
      underline={true}
      visible={false}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        colorName={null}
        customStyle={Object {}}
        dataLocator="my-rewards-tnc"
        fontSizeVariation="medium"
        justifyContent=""
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        text=""
        underline={true}
        visible={false}
      />
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`PageHeadingWithLinks native View should render correctly 1`] = `
<View>
  <Styled(Text)
    noTopPadding={false}
  >
    <Styled(BodyCopy)
      accessibilityText=""
      dataLocator="Page_Heading_link_header"
      fontSize="fs16"
      fontWeight="extrabold"
      margin={null}
      numberOfLines={null}
      text="Test"
      textDecoration={null}
    />
  </Styled(Text)>
  <Styled(LineComp)
    borderColor="black"
    borderWidth={1}
    marginBottom={28}
    marginLeft={0}
    marginRight={0}
    marginTop={0}
  />
  <Styled(View)>
    <Styled(Anchor)
      accessibilityLabel=""
      anchorVariation="primary"
      colorName={null}
      customStyle={Object {}}
      dataLocator="my-rewards-program-details"
      fontSizeVariation="medium"
      justifyContent=""
      locator=""
      margins={null}
      onPress={[Function]}
      text="test"
      underline={true}
      visible={false}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel=""
        anchorVariation="primary"
        colorName={null}
        customStyle={Object {}}
        dataLocator="my-rewards-tnc"
        fontSizeVariation="medium"
        justifyContent=""
        locator=""
        margins={null}
        noLink={true}
        onPress={[Function]}
        text="test"
        underline={true}
        visible={false}
      />
    </Styled(View)>
  </Styled(View)>
</View>
`;
